# python-workflow-demo

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml  vs-code.cmd
.github/workflows/: test_automatic.yml
python_workflow_demo/: assignment_geochecks.py  clip_raster.py  editable_installs.py  interactive_map.py  log_levels.py  nb_example.ipynb  nb_example.py  project.py  ruff_example.py
tests_demo/: test_interactive_map.py
